--- a/Modul3HW6/Modul3HW6/Modul3HW6.csproj
+++ b/Modul3HW6/Modul3HW6/Modul3HW6.csproj
@@ -10,6 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="config.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -20,10 +30,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Configs\" />
     <Folder Include="Helpers\" />
     <Folder Include="Providers\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
