--- a/Modul3HW6/Modul3HW6/config.json
+++ b/Modul3HW6/Modul3HW6/config.json
@@ -1,1 +1,1 @@
-{"LoggerConfig":{"DirectoryName":"Logs\\","FileExtension":".txt","FileNameFormat":"hh.mm.ss dd.MM.yyyy","TimeFormat":"hh:mm:ss","NumbeOfRowsToBackUp":2}}
+{"LoggerConfig":{"DirectoryName":"Logs\\","BackUpDirectoryName":"BackUp\\","FileExtension":".txt","FileNameFormat":"hh.mm.ss dd.MM.yyyy","TimeFormat":"hh:mm:ss","NumbeOfRowsToBackUp":10}}
